新增 Docker 本地部署流程與前後端容器串接
新增 docker-compose.yml，整合 frontend / backend / MySQL / Redis 服務。
新增前後端 Dockerfile 與 .dockerignore，完成多容器建置。
前端改用 VITE_API_BASE_URL 控制 API 位址，Docker 環境走 /api。
新增 Nginx 反向代理設定，將 /api 轉發到 backend。
後端 CORS 補上 localhost / 127.0.0.1，改善容器環境連線。